tester/testsuite/bad/bad034.jl
int main() { 
    boolean b=true;
    while(b) return 0; 
}
